# pdf_mcp_server

./: .env.example  .gitignore  README.es.md  README.md  pyproject.toml  requirements.txt
src/fastmcp_pdf_server/: config.py  main.py
src/fastmcp_pdf_server/services/: file_manager.py  image_processor.py  pdf_processor.py
src/fastmcp_pdf_server/tools/: conversion.py  pdf_manipulation.py  text_extraction.py  uploads.py  utilities.py
src/fastmcp_pdf_server/utils/: logger.py  parsers.py  telemetry.py  validators.py
tests/: test_integration_conversion.py  test_integration_manipulation.py  test_integration_text.py  test_parsers.py  test_validators.py
